Adapted library to be able to use on Java 11